display of home train page

--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.coroutine.core
+    implementation project(":calendar")
 }
