--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ compose-bom = "2023.01.00"
 room = "2.5.0"
 navigation-compose = "2.5.3"
 navigation-compose-hilt = "1.0.0"
+accompanist = "0.28.0"
 
 
 [plugins]
@@ -57,8 +58,11 @@ androidx-composeGraphics = { module = "androidx.compose.ui:ui-graphics", version
 androidx-composeMaterial = { module = "androidx.compose.material:material", version.ref = "compose-material" }
 androidx-composeUiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose-ui-tooling" }
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose-bom" }
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
+androidx-navigation-compose-core = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
 androidx-navigation-compose-hilt = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "navigation-compose-hilt" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
+
+accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist"}
 [bundles]
 androidx-compose = ["androidx-composeUi", "androidx-composeGraphics", "androidx-composeMaterial", "androidx-composeUiTooling", "androidx-compose-material3", "androidx-lifecycle-viewmodel-compose"]
+accompanist = ["accompanist-systemuicontroller"]
