apply chart to body detail page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     implementation project(":repository")
     implementation project(":database")
     implementation project(":calendar")
+    implementation project(":chart")
 }
