--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,21 @@ android {
             useSupportLibrary true
         }
     }
+    signingConfigs {
+        release {
+            storeFile file("${System.getenv("KEYSTORE_FILE") ?: "release.keystore"}")
+            storePassword System.getenv("KEYSTORE_PASSWORD")
+            keyAlias System.getenv("KEY_ALIAS")
+            keyPassword System.getenv("KEY_ALIAS_PASSWORD")
+        }
+    }
 
     buildTypes {
         debug {
             debuggable true
         }
         release {
+            signingConfig signingConfigs.release
             debuggable false
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -48,6 +57,12 @@ android {
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
+    applicationVariants.configureEach { variant ->
+        variant.outputs.all {
+            def fileName = "DailyFitness-${variant.name}-${variant.versionName}.apk"
+            outputFileName = fileName
         }
     }
 }
