--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 java = "17"
 kotlin = "1.7.20"
-android_build_tools = "8.1.0-beta01"
+android_build_tools = "8.1.0-alpha11"
 app_version = "0.0.1"
 kapt_version = "1.8.10"
 hilt_version = "2.45"
