--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,30 @@
 [versions]
 java = "17"
-kotlin = "1.7.20"
-android_build_tools = "8.1.0-alpha11"
+kotlin = "1.9.20"
+android_build_tools = "8.1.4"
 app_version = "0.0.1"
 kapt_version = "1.8.10"
-hilt_version = "2.45"
-ksp_version = "1.8.20-1.0.10"
-coroutine = "1.6.4"
+hilt_version = "2.48"
+ksp_version = "1.9.20-1.0.13"
+coroutine = "1.7.3"
 
 junit = "4.13.2"
-androidx-core = "1.9.0"
+androidx-core = "1.12.0"
 androidx-appcompat = "1.6.1"
-material = "1.8.0"
-androidx-lifecycle-runtime = "2.5.1"
-androidx-lifecycle-viewmodel-compose = "2.5.1"
-androidx-compose = "1.6.1"
-androidx-activity = "1.6.1"
-compose-animation = "1.3.3"
-compose-compiler = "1.4.5"
-compose-foundation = "1.3.1"
-compose-material = "1.3.1"
-compose-material3 = "1.0.1"
-compose-runtime = "1.3.3"
-compose-ui = "1.3.3"
-compose-ui-graphics = "1.3.3"
-compose-ui-tooling = "1.3.3"
-compose-bom = "2023.01.00"
-room = "2.5.0"
-navigation-compose = "2.5.3"
-navigation-compose-hilt = "1.0.0"
-accompanist = "0.28.0"
+androidx-lifecycle-runtime = "2.6.2"
+androidx-lifecycle-viewmodel-compose = "2.6.2"
+androidx-activity = "1.8.1"
+compose-compiler = "1.5.4"
+compose-material = "1.5.4"
+compose-material3 = "1.1.2"
+compose-ui = "1.5.4"
+compose-ui-graphics = "1.5.4"
+compose-ui-tooling = "1.5.4"
+compose-bom = "2023.10.01"
+room = "2.6.0"
+navigation-compose = "2.7.5"
+navigation-compose-hilt = "1.1.0"
+accompanist = "0.32.0"
 
 vico = "1.6.4"
 
