--- a/database/build.gradle
+++ b/database/build.gradle
@@ -66,5 +66,7 @@ dependencies {
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation libs.androidx.room.ktx
 
+    implementation libs.datetime
+
     implementation project(":repository")
 }
