--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -2,6 +2,7 @@ plugins {
     alias libs.plugins.android.library
     alias libs.plugins.kotlin
     alias libs.plugins.kapt
+    alias libs.plugins.serialization
 }
 
 android {
@@ -38,5 +39,6 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.coroutine.core
-    implementation project(":calendar")
+    implementation libs.serializationx.json
+    implementation libs.datetime
 }
