--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,30 @@
 [versions]
 java = "17"
-kotlin = "1.9.20"
+kotlin = "2.0.0"
 android_build_tools = "8.1.4"
 app_version = "0.0.1"
 kapt_version = "1.8.10"
-hilt_version = "2.48"
-ksp_version = "1.9.20-1.0.13"
-coroutine = "1.7.3"
-serialization = "1.6.1"
-datetime = "0.4.1"
+hilt_version = "2.51.1"
+ksp_version = "2.0.0-1.0.22"
+coroutine = "1.8.1"
+serialization = "1.7.1"
+datetime = "0.5.0"
 
 junit = "4.13.2"
-androidx-core = "1.12.0"
-androidx-appcompat = "1.6.1"
-androidx-lifecycle-runtime = "2.6.2"
-androidx-lifecycle-viewmodel-compose = "2.6.2"
-androidx-activity = "1.8.1"
-compose-compiler = "1.5.4"
-compose-material = "1.5.4"
-compose-material3 = "1.1.2"
-compose-ui = "1.5.4"
-compose-ui-graphics = "1.5.4"
-compose-ui-tooling = "1.5.4"
-compose-bom = "2023.10.01"
-room = "2.6.0"
-navigation-compose = "2.7.5"
-navigation-compose-hilt = "1.1.0"
+androidx-core = "1.13.1"
+androidx-appcompat = "1.7.0"
+androidx-lifecycle-runtime = "2.8.4"
+androidx-lifecycle-viewmodel-compose = "2.8.4"
+androidx-activity = "1.9.1"
+compose-material = "1.6.8"
+compose-material3 = "1.2.1"
+compose-ui = "1.6.8"
+compose-ui-graphics = "1.6.8"
+compose-ui-tooling = "1.6.8"
+compose-bom = "2024.06.00"
+room = "2.6.1"
+navigation-compose = "2.7.7"
+navigation-compose-hilt = "1.2.0"
 accompanist = "0.32.0"
 
 vico = "1.6.4"
@@ -38,6 +37,8 @@ kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kapt_version" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt_version" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp_version" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+
 
 [libraries]
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
