--- a/build.gradle
+++ b/build.gradle
@@ -7,4 +7,5 @@ plugins {
     alias libs.plugins.kapt apply false
     alias libs.plugins.hilt apply false
     alias libs.plugins.serialization apply false
+    alias(libs.plugins.compose.compiler) apply false
 }
